--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@types/node": "20.3.1",
@@ -21,6 +22,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "husky": "^8.0.3",
     "postcss-nested": "^6.0.1"
   }
 }
