--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "prepare": "husky install"
+    "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "20.3.1",
@@ -22,7 +21,6 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "husky": "^8.0.3",
     "postcss-nested": "^6.0.1"
   }
 }
