--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
     "@types/node": "20.3.1",
@@ -21,6 +25,10 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "postcss-nested": "^6.0.1"
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "postcss-nested": "^6.0.1",
+    "prettier": "2.8.8"
   }
 }
