add "Olimpiada do Conhecimento" to experiences section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["codezone", "curriculo", "eneva", "hurb"]
+  "cSpell.words": [
+    "codezone",
+    "Conhecimento",
+    "curriculo",
+    "eneva",
+    "hurb",
+    "olimpiada"
+  ]
 }
